--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="proximos-torneos">
       <h2>PRÓXIMOS TORNEOS</h2>
       <ul>
-        <li>Torneo de Verano - 15 de Agosto 2023</li> <img style="width: 200px; height: 300px;" src="img/prueba.png">
+        <li>Torneo de Verano - 15 de Agosto 2023</li> <img style="width: 200px; height: 300px;" src="img/pt.jpeg">
         <li>Torneo de Otoño - 30 de Septiembre 2023</li><img style="width: 200px; height: 300px;" src="img/ball.jpeg">
         <li>Torneo de Invierno - 20 de Diciembre 2023</li><img style="width: 200px; height: 300px;" src="img/pista.jpeg">
       </ul>
