--- a/html/contacto.html
+++ b/html/contacto.html
@@ -35,7 +35,7 @@
       <h2>Envíanos un mensaje</h2>
 
 
-      <form action="https://formspree.io/f/mleygepl" method="POST">
+      <form action="https://formspree.io/f/xgejavwd" method="POST">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required>
 
