--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section id="inscripcion">
       <h2>INSCRIPCIÓN</h2>
-        <form action="https://formspree.io/f/xknlonva" method="POST">
+        <form action="https://formspree.io/f/moqoevay" method="POST">
            
           <label for="torneo">Torneo al que desea inscribirse:</label>
           <select id="torneo" name="torneo" required>
