--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-        <h1>Torneos de Padel</h1>
+        <h1>MAX Sport Events</h1>
      
         <ul>
           <li class="dropdown">
@@ -22,7 +22,6 @@
               <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li><br>
               <li><a href="#información" onclick="closeMenu()">Información</a></li><br>
               <li><a href="#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
-              <li><a href="#resultados" onclick="closeMenu()">Resultados</a></li><br>
               <li><a href="#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
               <li><a href="html/contacto.html">Contacto</a></li>
             </ul>
@@ -49,34 +48,10 @@
     <section id="proximos-torneos">
       <h2>PRÓXIMOS TORNEOS</h2>
       <ul>
-        <li>Torneo de Verano - 15 de Agosto 2023</li> <img style="width: 200px; height: 300px;" src="img/pt.jpeg">
-        <li>Torneo de Otoño - 30 de Septiembre 2023</li><img style="width: 200px; height: 300px;" src="img/ball.jpeg">
-        <li>Torneo de Invierno - 20 de Diciembre 2023</li><img style="width: 200px; height: 300px;" src="img/pista.jpeg">
+        <li>Torneo de Verano - 15 de Agosto 2023</li> <img style="width: 200px; height: 300px;" src="img/poster.jpg">
       </ul>
     </section>
 
-  <!-- Resultados para los torneos ya realizados -->
-
-    <section id="resultados">
-      <h2>RESULTADOS</h2>
-      <table>
-        <tr>
-          <th>Torneo</th>
-          <th>Fecha</th>
-          <th>Campeones</th>
-        </tr>
-        <tr>
-          <td>Torneo Año Nuevo</td>
-          <td>2 de Enero 2023</td>
-          <td>gonzalo </td>
-        </tr>
-        <tr>
-          <td>Torneo de Navidad 2022</td>
-          <td>25 de Diciembre 2022</td>
-          <td>Jimmy neutron</td>
-        </tr>
-      </table>
-    </section>
 
 <!-- Form para la inscripción -->
 
@@ -88,7 +63,7 @@
           <select id="torneo" name="torneo" required>
             <option value="" selected disabled>Seleccionar torneo</option>
             <option value="5 de agosoto">Torneo verano 5 de agosto</option>
-            <option value="15 de agosto">Torneo verano 15 de agosto</option>
+            <!-- <option value="15 de agosto">Torneo verano 15 de agosto</option> -->
           </select><br>
 
           
