logo + ig + menu

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -23,6 +23,7 @@
             <li><a href="../index.html#información" onclick="closeMenu()">Información</a></li><br>
             <li><a href="../index.html#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
             <li><a href="../index.html#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
+            <li><a href="https://instagram.com"><img style="width: 50px; height: 50px;" src="../img/ig.jpg"></a></li>
           </ul>
         </li>
       </ul>
@@ -53,7 +54,7 @@
   
   </main>
   <footer>
-    <p>© 2023 Torneos de Padel. Todos los derechos reservados.</p>
+    <p>© 2023 MAX Sport Events. Todos los derechos reservados.</p>
   </footer>
 
   <script src="../js/script.js"></script>
