--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
   <header>
     <nav>
-        <h1>MAX Sport Events</h1>
-     
         <ul>
           <li class="dropdown">
             <span class="hamburger" onclick="openMenu()">
@@ -24,6 +22,7 @@
               <li><a href="#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
               <li><a href="#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
               <li><a href="html/contacto.html">Contacto</a></li>
+              <li><a href="https://instagram.com"><img style="width: 50px; height: 50px;" src="img/ig.jpg"></a></li>
             </ul>
           </li>
         </ul>
@@ -115,7 +114,7 @@
 
   <div class="footer">
     <footer>
-      <p>© 2023 Torneos de Padel. Todos los derechos reservados.</p>
+      <p>© 2023 MAX Sport Events. Todos los derechos reservados.</p>
     </footer>
   </div>
 
