--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li><a href="#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
               <li><a href="#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
               <li><a href="html/contacto.html">Contacto</a></li>
-              <li><a href="https://instagram.com"><img style="width: 50px; height: 50px;" src="img/ig.jpg"></a></li>
+              <li><a href="https://instagram.com/maxsportevents"><img style="width: 50px; height: 50px;" src="img/ig.jpg"></a></li>
             </ul>
           </li>
         </ul>
