--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
           <li>Partidos a un set con punto de oro.</li>
           <li>Fase de grupos y pase a cuadro principal o de consolación.</li>
           <li>Se garantiza los partidos del cuadro +1 de eliminatoria.</li>
-          <li>Premios para el campeón y subcampeón del cuadro principal y campeón del cuadro de consolación.</li>
-          <li>Agua y fruta de bienvenida.</li>
+          <li>Se garantiza un pack de bienvenida y premios por cada torneoA.</li>
       </ul>
     </section>
 
@@ -47,7 +46,11 @@
     <section id="proximos-torneos">
       <h2>PRÓXIMOS TORNEOS</h2>
       <ul>
-        <li>Torneo de Verano - 15 de Agosto 2023</li> <img style="width: 300px; height: 450px;" src="img/poster.jpg">
+        <li>TORNEO DE VERANO - 25 de agosto 2023</li>  <img style="width: 500px; height: 700px;" src="img/poster.jpg">
+        <li>I MAX TOURNOMENT - 15 de Septiembre 2023</li> <img style="width: 500px; height: 700px;" src="img/poster1.jpg">
+            <br><b>- Como llegar: <a 
+                href="https://www.google.com/maps/dir/40.4094976,-3.6470784/padeld10z/@41.0084257,-5.6382639,8z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0xd476dab12ef88bb:0x5abce5c04219c79e!2m2!1d-4.7730361!2d41.623986?entry=ttu"
+              >Padel D10Z</a></b><br>
       </ul>
     </section>
 
@@ -61,7 +64,7 @@
           <label for="torneo">Torneo al que desea inscribirse:</label>
           <select id="torneo" name="torneo" required>
             <option value="" selected disabled>Seleccionar torneo</option>
-            <option value="5 de agosoto">Torneo verano 5 de agosto</option>
+            <option value="5 de agosoto">I MAX TOURNOMENT - 15 de Septiembre</option>
             <!-- <option value="15 de agosto">Torneo verano 15 de agosto</option> -->
           </select><br>
 
