--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
-  <link rel="stylesheet" href="../css/contacto_estilo.css">
+  <link rel="stylesheet" href="../css/contacto_style.css">
 </head>
 <body>
   <header>
@@ -23,7 +23,7 @@
             <li><a href="../index.html#información" onclick="closeMenu()">Información</a></li><br>
             <li><a href="../index.html#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
             <li><a href="../index.html#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
-            <li><a href="https://instagram.com/maxsportevents"><img style="width: 50px; height: 50px;" src="../img/ig.jpg"></a></li>
+            <li><a href="https://instagram.com/maxsportevents"><img style="width: 50px; height: 50px;" src="../img/instagram.jpeg"></a></li>
           </ul>
         </li>
       </ul>
