--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
-  <link rel="stylesheet" href="../css/contacto_style.css">
+  <link rel="stylesheet" href="css/contacto_style.css">
 </head>
 <body>
   <header>
@@ -19,12 +19,10 @@
           </span>
           <ul class="menu" id="menu">
             <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li><br>
-            <li><a href="../index.html" onclick="closeMenu()">Inicio</a></li><br>
-            <li><a href="../index.html#información" onclick="closeMenu()">Información</a></li><br>
-            <li><a href="../index.html#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
-            <li><a href="../index.html#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
-            <li><a href="https://instagram.com/maxsportevents"><img style="width: 50px; height: 50px;" src="../img/instagram.jpeg"></a></li>
-          </ul>
+            <li><a href="index.html" onclick="closeMenu()">Inicio</a></li><br>
+            <li><a href="torneos.html#informacion" onclick="closeMenu()">Información</a></li><br>
+            <li><a href="torneos.html#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
+            <li><a href="torneos.html#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
         </li>
       </ul>
 </nav>
