--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
   <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
+
+  <div class="franja-superior">
+    <p class="info">Más Información:</p>
+    <a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a>
+    <a href="tel:646263836" class="numero-telefono">646 263 836</a>
+  </div>
+
+  <div id="triangulo-izquierdo"></div>
+  <div id="triangulo-derecho"></div>
+
   <div class="botones-container">
-    <p>En MAX Sport Events, creamos experiencias únicas en el mundo del pádel.<br>
+    <b>En MAX Sport Events, creamos experiencias únicas en el mundo del pádel.<br>
       Descubre nuestros emocionantes torneos y asegura tu lugar en la competencia.<br>
-      ¡Inscríbete hoy y vive la intensidad del pádel como nunca antes!</p>
+      ¡Inscríbete hoy y vive la intensidad del pádel como nunca antes!</b><br><br>
     <a class="boton" href="torneos.html">Torneos</a>
   </div>
   <div class="botones-container2">
-    <p>¡Hablemos! Queremos escuchar tus preguntas, ideas y sugerencias.
-      Contacta con nosotros y juntos haremos que tu experiencia sea excepcional.</p>
+    <b>¡Hablemos! Queremos escuchar tus preguntas, ideas y sugerencias.<br>
+      Contacta con nosotros y juntos haremos que tu experiencia sea excepcional.</b><br><br>
     <a class="boton" href="contacto.html">Contacto</a>
-  </div>
-  <div class="more_info">
-    Para mas información, contacta con nosotros:<br>
-    <a href="https://instagram.com/maxsportevents"><img src="../img/instagram.jpeg" style="height: 50px; width: 50px;"></a>
-    <a href="tel: 646263836">646263836</a>
   </div>
 </body>
 </html>
