--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <b>En MAX Sport Events, creamos experiencias únicas en el mundo del pádel.<br>
       Descubre nuestros emocionantes torneos y asegura tu lugar en la competencia.<br>
       ¡Inscríbete hoy y vive la intensidad del pádel como nunca antes!</b><br><br>
-    <a class="boton" href="torneos.html">Torneos</a>
+    <a class="boton" href="torneos">Torneos</a>
   </div>
   <div class="botones-container2">
     <b>¡Hablemos! Queremos escuchar tus preguntas, ideas y sugerencias.<br>
       Contacta con nosotros y juntos haremos que tu experiencia sea excepcional.</b><br><br>
-    <a class="boton" href="contacto.html">Contacto</a>
+    <a class="boton" href="contacto">Contacto</a>
   </div>
 </body>
 </html>
