--- a/contacto/index.html
+++ b/contacto/index.html
@@ -20,9 +20,13 @@
           <ul class="menu" id="menu">
             <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li><br>
             <li><a href=".." onclick="closeMenu()">Inicio</a></li><br>
-            <li><a href="../torneos/#informacion" onclick="closeMenu()">Información</a></li><br>
-            <li><a href="../torneos/#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
-            <li><a href="../torneos/#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
+            <li><a href="../#informacion" onclick="closeMenu()">Información</a></li><br>
+            <li><a href="../#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
+            <li><a href="../#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
+            <p class="info">Más Información:</p>
+            <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
+            <li><a href="tel:646263836" class="numero-telefono">646 263 836</a></li>
+          </ul>
         </li>
       </ul>
 </nav>
