ocultar header con el poster

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <header>
+  <header id="header">
     <nav>
       <img src="img/logo.JPG" style="width: 10%; height: 10%;">
       <span class="hamburger" onclick="openMenu()">
