--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header id="header">
     <nav>
-      <img src="img/logo.JPG" style="width: 10%; height: 10%;">
+      <img src="img/logo.JPG">
       <span class="hamburger" onclick="openMenu()">
           <div class="bar"></div>
           <div class="bar"></div>
@@ -32,12 +32,15 @@
 
   <main>
 
-    <div class="texto-inicio">
-      <p>Te damos la bienvenida a MAX Sport Events, tu destino para el emocionante mundo del pádel.<br>
-        Nuestra misión es crear oportunidades para que los jugadores de todos los niveles se destaquen en la cancha.<br>
-        Desde la intensidad de la competencia hasta la diversión y la emoción de cada partido, 
-          cada evento está planeado para que disfrutes al máximo.<br>
-        ¡Anímate a vivir esta experiencia con MAX Sport Events!</p>
+    <!--Texto inicial-->
+    <div class="box-text right" id="box1">
+      <p>Te damos la bienvenida a MAX Sport Events, tu destino para el emocionante mundo del pádel.</p>
+    </div>
+    <div class="box-text right1" id="box2">
+      <p>Nuestra misión es crear oportunidades para que los jugadores de todos los niveles se destaquen en la cancha.</p>
+    </div>
+    <div class="box-text right2" id="box3">
+      <p >Desde la intensidad de la competencia hasta la diversión y la emoción de cada partido, cada evento está planeado para que disfrutes al máximo.</p>
       <a class="boton" href="#inscripcion">INSCRÍBETE AHORA</a>
     </div>
 
