--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>Nuestra misión es crear oportunidades para que los jugadores de todos los niveles se destaquen en la cancha.</p>
     </div>
     <div class="box-text right2" id="box3">
-      <p >Desde la intensidad de la competencia hasta la diversión y la emoción de cada partido, cada evento está planeado para que disfrutes al máximo.</p>
+      <p>¡Anímate a vivir la intensidad de la competencia junto con la diversión y la emoción de cada partido con MAX Sport Events!</p>
       <a class="boton" href="#inscripcion">INSCRÍBETE AHORA</a>
     </div>
 
