header margin-top

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -7,11 +7,9 @@
   <link rel="stylesheet" href="../css/contacto_style.css">
 </head>
 <body>
-  <header>
- <nav>
-    <h1>Contacto</h1>
-    <ul>
-        <li class="dropdown">
+  <header id="header">
+  <nav>
+    <img src="../img/logo.JPG" id="milogo">
           <span class="hamburger" onclick="openMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
@@ -22,14 +20,12 @@
             <li><a href=".." onclick="closeMenu()">Inicio</a></li><br>
             <li><a href="../#informacion" onclick="closeMenu()">Información</a></li><br>
             <li><a href="../#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
-            <li><a href="../#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
+            <li><a href="../#inscripción" onclick="closeMenu()">Inscripción</a></li><br>
             <p class="info">Más Información:</p>
             <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
             <li><a href="tel:646263836" class="numero-telefono">646 263 836</a></li>
           </ul>
-        </li>
-      </ul>
-</nav>
+  </nav>
 </header>
        
   <main>
