--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Torneos de Padel</title>
   <link rel="stylesheet" href="css/torneos_style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+  <link rel="stylesheet" href="css/fix_header.css">
 </head>
 <body>
   <header id="header">
     <nav>
-      <img src="img/logo.JPG">
+      <img src="img/logo.JPG" id="milogo">
       <span class="hamburger" onclick="openMenu()">
           <div class="bar"></div>
           <div class="bar"></div>
@@ -21,7 +21,7 @@
           <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li><br>
           <li><a href="#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
           <li><a href="#información" onclick="closeMenu()">Información</a></li><br>
-          <li><a href="#inscripcion" onclick="closeMenu()">Inscripción</a></li><br>
+          <li><a href="#inscripción" onclick="closeMenu()">Inscripción</a></li><br>
           <li><a href="contacto">Contacto</a></li>
           <p class="info">Más Información:</p>
           <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
@@ -41,7 +41,7 @@
     </div>
     <div class="box-text right2" id="box3">
       <p>¡Anímate a vivir la intensidad de la competencia junto con la diversión y la emoción de cada partido con MAX Sport Events!</p>
-      <a class="boton" href="#inscripcion">INSCRÍBETE AHORA</a>
+      <a class="boton" href="#inscripción">INSCRÍBETE AHORA</a>
     </div>
 
 
@@ -77,7 +77,7 @@
 
 <!-- Form para la inscripción -->
 
-    <section id="inscripcion">
+    <section id="inscripción">
       <h2>INSCRIPCIÓN</h2>
         <form action="https://formspree.io/f/moqoevay" method="POST">
            
