información en contacto

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <li>Fase de grupos y pase a cuadro principal o de consolación.</li>
           <li>Cada pareja se asegura jugar los partidos del cuadro +1 de eliminatoria.</li>
           <li>Con la inscripción se garantiza pack de bienvenida y premios.</li>
+          <li>El importe se abonará en el lugar y el día del torneo.</li>
     </section>
 
 
