--- a/contacto/index.html
+++ b/contacto/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header id="header">
-  <nav>
-    <img src="../img/logo.JPG" id="milogo">
+    <nav>
+      <img src="../img/logo.JPG" id="milogo">
           <span class="hamburger" onclick="openMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
@@ -18,15 +18,15 @@
           <ul class="menu" id="menu">
             <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li><br>
             <li><a href=".." onclick="closeMenu()">Inicio</a></li><br>
-            <li><a href="../#informacion" onclick="closeMenu()">Información</a></li><br>
             <li><a href="../#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
+            <li><a href="../#información" onclick="closeMenu()">Información</a></li><br>
             <li><a href="../#inscripción" onclick="closeMenu()">Inscripción</a></li><br>
             <p class="info">Más Información:</p>
             <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
             <li><a href="tel:646263836" class="numero-telefono">646 263 836</a></li>
           </ul>
-  </nav>
-</header>
+    </nav>
+  </header>
        
   <main>
     <section id="formulario">
