--- a/contacto/index.html
+++ b/contacto/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
-  <link rel="stylesheet" href="../css/contacto_style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <header id="header">
@@ -36,14 +36,14 @@
       <form action="https://formspree.io/f/xgejavwd" method="POST">
         <input type="hidden" name="_next" value="confirmacion.html">
 
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
+        <label for="nombre">Nombre:</label><br>
+        <input type="text" id="nombre" name="nombre" required><br>
 
-        <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="email">Correo electrónico:</label><br>
+        <input type="email" id="email" name="email" required><br>
 
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+        <label for="mensaje">Mensaje:</label><br>
+        <textarea id="mensaje" name="mensaje" rows="5" required></textarea><br>
 
         <button type="submit">Enviar mensaje</button>
       </form>
