--- a/contacto/index.html
+++ b/contacto/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/jpg" href="../img/logo.JPG">
 </head>
 <body>
   <header id="header">
