--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="css/fix_header.css">
+  <link rel="icon" type="image/jpg" href="img/logo.JPG">
 </head>
 <body>
   <header id="header">
@@ -28,6 +29,16 @@
           <li><a href="tel:646263836" class="numero-telefono">646 263 836</a></li>
         </ul>
     </nav>
+
+    <ul class="menu-or" id="menu-or">
+      <a href="#proximos-torneos">Próximos Torneos</a>
+      <a href="#información">Información</a>
+      <a href="#inscripción">Inscripción</a>
+      <a href="contacto">Contacto</a>
+      <p class="info">Más Información:</p>
+      <a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a>
+      <a href="tel:646263836" class="numero-telefono">646 263 836</a>
+    </ul>
   </header>
 
   <main>
