--- a/index.html
+++ b/index.html
@@ -19,26 +19,16 @@
           <div class="bar"></div>
       </span>
       <ul class="menu" id="menu">
-          <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li><br>
-          <li><a href="#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
-          <li><a href="#información" onclick="closeMenu()">Información</a></li><br>
-          <li><a href="#inscripción" onclick="closeMenu()">Inscripción</a></li><br>
+          <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li>
+          <li><a href="#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li>
+          <li><a href="#información" onclick="closeMenu()">Información</a></li>
+          <li><a href="#inscripción" onclick="closeMenu()">Inscripción</a></li>
           <li><a href="contacto">Contacto</a></li>
           <p class="info">Más Información:</p>
           <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
           <li><a href="tel:646263836" class="numero-telefono">646 263 836</a></li>
         </ul>
     </nav>
-
-    <ul class="menu-or" id="menu-or">
-      <a href="#proximos-torneos">Próximos Torneos</a>
-      <a href="#información">Información</a>
-      <a href="#inscripción">Inscripción</a>
-      <a href="contacto">Contacto</a>
-      <p class="info">Más Información:</p>
-      <a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a>
-      <a href="tel:646263836" class="numero-telefono">646 263 836</a>
-    </ul>
   </header>
 
   <main>
