--- a/contacto/index.html
+++ b/contacto/index.html
@@ -17,11 +17,11 @@
             <div class="bar"></div>
           </span>
           <ul class="menu" id="menu">
-            <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li><br>
-            <li><a href=".." onclick="closeMenu()">Inicio</a></li><br>
-            <li><a href="../#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li><br>
-            <li><a href="../#información" onclick="closeMenu()">Información</a></li><br>
-            <li><a href="../#inscripción" onclick="closeMenu()">Inscripción</a></li><br>
+            <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li>
+            <li><a href=".." onclick="closeMenu()">Inicio</a></li>
+            <li><a href="../#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li>
+            <li><a href="../#información" onclick="closeMenu()">Información</a></li>
+            <li><a href="../#inscripción" onclick="closeMenu()">Inscripción</a></li>
             <p class="info">Más Información:</p>
             <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
             <li><a href="tel:646263836" class="numero-telefono">646 263 836</a></li>
