--- a/contacto/index.html
+++ b/contacto/index.html
@@ -10,27 +10,24 @@
 <body>
   <header id="header">
     <nav>
-      <img src="../img/logo.JPG" id="milogo">
+      <img src="../img/logo.JPG" id="logo">
           <span class="hamburger" onclick="openMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
           </span>
           <ul class="menu" id="menu">
-            <li><a style="font-size: 30px;" onclick="closeMenu()">✘</a></li>
-            <li><a href=".." onclick="closeMenu()">Inicio</a></li>
-            <li><a href="../#proximos-torneos" onclick="closeMenu()">Próximos Torneos</a></li>
-            <li><a href="../#información" onclick="closeMenu()">Información</a></li>
-            <li><a href="../#inscripción" onclick="closeMenu()">Inscripción</a></li>
-            <p class="info">Más Información:</p>
+            <li><a href="..">Inicio</a></li>
+            <li><a href="../#proximos-torneos">Próximos Torneos</a></li>
+            <li><a href="../#información">Información</a></li>
+            <li><a href="../#inscripción">Inscripción</a></li>
             <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
-            <li><a href="tel:646263836" class="numero-telefono">646 263 836</a></li>
           </ul>
     </nav>
   </header>
        
   <main>
-    <section id="formulario">
+    <div class="form-contact">
       <h2>Envíanos un mensaje</h2>
 
 
@@ -49,7 +46,7 @@
         <button type="submit">Enviar mensaje</button>
       </form>
 
-    </section>
+    </div>
   
   </main>
   <script src="../js/script.js"></script>
