--- a/contacto/index.html
+++ b/contacto/index.html
@@ -11,18 +11,19 @@
   <header id="header">
     <nav>
       <img src="../img/logo.JPG" id="logo">
-          <span class="hamburger" onclick="openMenu()">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </span>
-          <ul class="menu" id="menu">
-            <li><a href="..">Inicio</a></li>
-            <li><a href="../#proximos-torneos">Próximos Torneos</a></li>
-            <li><a href="../#información">Información</a></li>
-            <li><a href="../#inscripción">Inscripción</a></li>
-            <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
-          </ul>
+      <input type="checkbox" id="menu-toggle">
+      <label for="menu-toggle" class="hamburger" onclick="openMenu()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </label>
+      <ul class="menu" id="menu">
+        <li><a href=".." onclick="closeMenu()">Inicio</a></li>
+        <li><a href="../#información" onclick="closeMenu()">Información</a></li>
+        <li><a href="../#torneos" onclick="closeMenu()">Próximos Torneos</a></li>
+        <li><a href="../#inscripción" onclick="closeMenu()">Inscripción</a></li>
+        <li><a href="https://instagram.com/maxsportevents" class="enlace-instagram">Instagram</a></li>
+      </ul>
     </nav>
   </header>
        
