--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
 
   <main>
 
+    <!-- Información -->
+    <div class="información" id="información">
+      <button class="prev-button" onclick="prevButton()">&#10094;</button>
+      <div class="info-content" id="info-div">
+          <div class="info-item">
+            <h1>INFORMACIÓN</h1>
+            <p>Te damos la bienvenida a MAX Sport Events, tu destino para el emocionante mundo del pádel.</p>
+          </div>
+          <div class="info-item">
+            <p>Nuestra misión es crear oportunidades para que los jugadores de todos los niveles se destaquen en la cancha.</p>
+          </div>
+          <div class="info-item">
+            <p>¡Anímate a vivir la intensidad de la competencia junto con la diversión y la emoción de cada partido con MAX Sport Events!</p>
+            <a class="boton" href="#inscripción">INSCRÍBETE AHORA</a>
+          </div>
+      </div>
+      <button class="next-button" onclick="nextButton()">&#10095;</button>
+  </div>
+  
+
+
 
     <!-- Proximos torneos -->
     <div class="torneos" id="torneos">
@@ -54,11 +75,7 @@
     </div>
 
 
-    <!-- Información ->
-    <div class="información" id="información">
-      <h1>INFORMACIÓN</h1>
-      <img src="img/poster.jpg" alt="poster" style="width: 50%; height: auto;">
-    </div> -->
+
 
 
     <!-- Incripción -->
