--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
   <main>
 
     <!-- Información -->
+    <div class="h1info">
+      <h1>INFORMACIÓN</h1>
     <div class="información" id="información">
       <button class="prev-button" onclick="prevButton()">&#10094;</button>
       <div class="info-content" id="info-div">
           <div class="info-item">
-            <h1>INFORMACIÓN</h1>
+            
             <p>Te damos la bienvenida a MAX Sport Events, tu destino para el emocionante mundo del pádel.</p>
           </div>
           <div class="info-item">
@@ -49,6 +51,7 @@
       </div>
       <button class="next-button" onclick="nextButton()">&#10095;</button>
   </div>
+</div>
   
 
 
