--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
           <div class="info-item">
             
             <p>Te damos la bienvenida a MAX Sport Events, tu destino para el emocionante mundo del pádel.</p>
+            <p>Somos una empresa de eventos deportivos y nuestra misión es crear oportunidades para que los jugadores de todos los niveles disfruten del juego.</p>
+            <p>¡Anímate a vivir la intensidad de la competencia junto con la diversión y la emoción de cada partido!</p>
+            <button class="botón-info"><a href="#inscripción">INSCRÍBETE AHORA</a></button>
           </div>
           <div class="info-item">
             <p>Nuestra misión es crear oportunidades para que los jugadores de todos los niveles se destaquen en la cancha.</p>
           </div>
           <div class="info-item">
             <p>¡Anímate a vivir la intensidad de la competencia junto con la diversión y la emoción de cada partido con MAX Sport Events!</p>
-            <a class="boton" href="#inscripción">INSCRÍBETE AHORA</a>
+            <button><a href="#inscripción">INSCRÍBETE AHORA</a></button>
           </div>
       </div>
       <button class="next-button" onclick="nextButton()">&#10095;</button>
